--- a/q/275147.html
+++ b/q/275147.html
@@ -26,14 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>05AB1E legacy</td><td>240826T074442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275156#275156">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>019</td><td>Charcoal</td><td>240826T062329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275155#275155">Neil</a></td></tr>
-<tr d-ix="2"><td>017</td><td>Retina 0.8.2</td><td>240826T035406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275151#275151">Neil</a></td></tr>
-<tr d-ix="3"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
-<tr d-ix="4"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
-<tr d-ix="5"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
+<tr d-ix="0"><td>070</td><td>Java</td><td>240826T081310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275157#275157">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>017</td><td>05AB1E legacy</td><td>240826T074442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275156#275156">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>019</td><td>Charcoal</td><td>240826T062329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275155#275155">Neil</a></td></tr>
+<tr d-ix="3"><td>017</td><td>Retina 0.8.2</td><td>240826T035406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275151#275151">Neil</a></td></tr>
+<tr d-ix="4"><td>034</td><td>K ngn/k</td><td>240826T025549Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275150#275150">akamayu</a></td></tr>
+<tr d-ix="5"><td>021</td><td>Jelly</td><td>240826T022836Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275149#275149">Jonathan</a></td></tr>
+<tr d-ix="6"><td>061</td><td>JavaScript Node.js</td><td>240826T014654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275147/curry-a-c-function-pointer/275148#275148">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>19</s> 17 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>Java, 70 bytes</h1>
+
+<pre class="lang-java prettyprint-override"><code>s-&gt;s.replace(&quot;(*&quot;,&quot;(*&quot;.repeat(s.split(&quot;,&quot;).length)).replace(&quot;,&quot;,&quot;))(&quot;)
+</code></pre>
+<p><a href="https://tio.run/##bZCxTgMxDIb3PoWVKW6veQAqGEBiowsjYjDXtKRNc6fYLYLqVh6AR@RFDgdSWBhix1@c37@8pSPNt6vd2EZihjsK6TQBCEl8XlPrYVlKgHvJIW2gtfXCuFA@TDSwkIQWlpDgcuT5Fbvs@6h/rbFT05RQiCex7LiPQaxSdNGnjTwj/rU3haM1OC6KcH94iipc9Y9dWMFe/VULD4@EP97WXbZHyiCe5YbYXyT/Auemk7ntOjtFqwlVv1bXlEulqb41/xI9b2gG/J6jW3hl8XvXHcT1Ki8x2fPQmYHP9w8ws@TaX4h1S8P4BQ" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+<pre class="lang-java prettyprint-override"><code>s-&gt;                        // Method with String as both parameter and return-type
+  s.replace(&quot;(*&quot;,          //  Replace the &quot;(*&quot;
+            &quot;(*&quot;.repeat(   //  with itself repeated the following amount of times:
+              s.split(&quot;,&quot;) //   Split the input-string on &quot;,&quot;
+               .length))   //   And get its length
+   .replace(&quot;,&quot;,           //  And also replace all &quot;,&quot;
+            &quot;))(&quot;)         //  with &quot;))(&quot;
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, <s>19</s> 17 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>',¢F„(*x.;',…))(:
 </code></pre>
 <p>-2 bytes (<code>'(…(*(.;</code> → <code>„(*x.;</code>) switching to the legacy version of 05AB1E (built in Python), where multiply on strings to repeat them works</p>
@@ -52,7 +68,7 @@
                    # (after the loop, the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
 <pre><code>≔⪪θ,η⪫⪪⪫η))(¦(*⭆η(*
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/9@xuDgzPU8juCAns0SjUEdBSUdJU0chQ9OaK6AoM69Ewys/EyYLZmYAlWhqaoAUKWlogajgEqDCdN/EArAcSExT0/r/f6fEIg0tTQ23/HwdIBOIqzT/65blAAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Port of @akamayu's K answer.</p>
@@ -63,13 +79,13 @@
 </code></pre>
 <p>Join that split with <code>))(</code>, then split again on <code>(*</code>, then join with <code>(*</code> repeated for each part of the original split.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 17 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 17 bytes</h1>
 <pre><code>+`(\).+),
 (*$1))(
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fO0EjRlNPW1OHS0NLxVBTU@P/f7f8fA0tTQ0gpckFZTslFmlyAQmouA4WPhBXaQIA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Explanation: Repeatedly replace each comma in turn from right to left with <code>))(</code>, inserting an extra <code>(*</code> after the return type each time.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 34 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 34 bytes</h1>
 <p>Replace each <code>,</code> with <code>))(</code> and repeat <code>(*</code> for number of <code>,</code> times.</p>
 <pre><code>{((2*#i)#&quot;(*&quot;)/&quot;(*&quot;\&quot;))(&quot;/i:&quot;,&quot;\x}
 </code></pre>
@@ -82,7 +98,7 @@
  ((2*#i)#&quot;(*&quot;)                        &quot;(*&quot; repeated for 1 + number of &quot;,&quot; times
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 21 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>iṂœṖjċ”,⁾(*ẋƊṣ”,j“))(
 </code></pre>
 <p>A full program that accepts a string and prints the result.</p>
@@ -102,7 +118,7 @@ i                     - first index of {'('}
                       - implicit print    
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 61 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.replace(/\W+(\w*)/g,(_,y)=&gt;y?(s+=`)(${y})`,'(*'):s,s='')
 </code></pre>
