--- a/q/275165.html
+++ b/q/275165.html
@@ -26,32 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="1"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="0"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
 <tr d-ix="2"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
 <tr d-ix="3"><td>078</td><td>JavaScript ES10</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
 <tr d-ix="4"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
 <tr d-ix="5"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="6"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>JŒcẎṙ-ṁżƲị
-</code></pre>
-<p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8/9/r6KTkh7v6Hu6cqftwZ@PRPcc2Pdzd/f9wu/v//9FKjjmZyalKOgpKTvlJIMo5I7EoJxMs4pJYBqZdgVQsAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
-<h4>How?</h4>
-<pre><code>JŒcẎṙ-ṁżƲị - Link: Names
-J          - indices -&gt; [1..#Names]
- Œc        - ordered pairs -&gt; [[1,2],[1,3],...,[1,#Names],[2,3],...]
-        Ʋ  - last four links as a monad - f(OrderedIndexPairs):
-   Ẏ       -   tighten {OrderedIndexPairs}
-    ṙ-     -   rotate {that} one to the left
-      ṁ    -   mould {that} like {OrderedIndexPairs}
-       ż   -   zip {that} with {OrderedIndexPairs}
-         ị - index into {Names}
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1>Google Sheets, 159 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 159 bytes</h1>
 <pre><code>=let(a,1:1,s,&quot; &quot;,mid(trim(join(s,map(a,lambda(n,let(o,offset(n,,1,,99),r,ifna(filter(o,len(o))),join(s,sort(if(len(r),n&amp;s&amp;n&amp;s&amp;r&amp;s&amp;r,)))))))),2+len(a),9^9)&amp;s&amp;a)
 </code></pre>
 <p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
@@ -72,6 +55,34 @@ J          - indices -&gt; [1..#Names]
     2 + len(choosecols(a, 1)), 9^9 
   ) &amp; s &amp; choosecols(a, 1) 
 )
+</code></pre>
+<p>Pretty much the same in JavaScript (non-competing):</p>
+<pre class="lang-js prettyprint-override"><code>f = a =&gt;
+  a.slice(1)
+    .map(n =&gt; ([a[0], a[0], n, n]).join())
+    .join()
+  + (a.length &gt; 1 ? ',' + f(a.slice(1)) : '')
+
+g = A =&gt; f(A).slice(A[0].length + 1) + A[0]
+
+console.log(g([&quot;Alice&quot;, &quot;Bob&quot;, &quot;Tom&quot;,]))
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>JŒcẎṙ-ṁżƲị
+</code></pre>
+<p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
+<p><strong><a href="https://tio.run/##y0rNyan8/9/r6KTkh7v6Hu6cqftwZ@PRPcc2Pdzd/f9wu/v//9FKjjmZyalKOgpKTvlJIMo5I7EoJxMs4pJYBqZdgVQsAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<h4>How?</h4>
+<pre><code>JŒcẎṙ-ṁżƲị - Link: Names
+J          - indices -&gt; [1..#Names]
+ Œc        - ordered pairs -&gt; [[1,2],[1,3],...,[1,#Names],[2,3],...]
+        Ʋ  - last four links as a monad - f(OrderedIndexPairs):
+   Ẏ       -   tighten {OrderedIndexPairs}
+    ṙ-     -   rotate {that} one to the left
+      ṁ    -   mould {that} like {OrderedIndexPairs}
+       ż   -   zip {that} with {OrderedIndexPairs}
+         ị - index into {Names}
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
