--- a/q/275165.html
+++ b/q/275165.html
@@ -26,15 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="1"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
-<tr d-ix="2"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
-<tr d-ix="3"><td>078</td><td>JavaScript ES10</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
-<tr d-ix="4"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
-<tr d-ix="5"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
-<tr d-ix="6"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>071</td><td>JavaScript Node.js</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="1"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
+<tr d-ix="2"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="3"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
+<tr d-ix="4"><td>078</td><td>JavaScript ES10</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
+<tr d-ix="5"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
+<tr d-ix="6"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
+<tr d-ix="7"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyT4aJBILEqqsqUnTiIbKauoAWYlg8TSQJoiW6FjNWKuK/8n5ecX5Oal6OfnpGkBZJceczORUJR0lp/wkIBmSn6sUq6nJhaEKpAKInYHYBYhdQar@AwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<ul>
+<li>A-&gt;B</li>
+<li>f(ALL-A)</li>
+<li>B-&gt;A</li>
+<li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒcẎ;⁸,ƝQ
 </code></pre>
 <p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
@@ -49,7 +62,7 @@
        Q - deduplicate           -&gt; [[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[Y,Z],[Z,a]]
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Google Sheets, 159 bytes</h1>
+<div id="pu2" class="pu"><h1>Google Sheets, 159 bytes</h1>
 <pre><code>=let(a,1:1,s,&quot; &quot;,mid(trim(join(s,map(a,lambda(n,let(o,offset(n,,1,,99),r,ifna(filter(o,len(o))),join(s,sort(if(len(r),n&amp;s&amp;n&amp;s&amp;r&amp;s&amp;r,)))))))),2+len(a),9^9)&amp;s&amp;a)
 </code></pre>
 <p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
@@ -84,7 +97,7 @@ console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quo
 // &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for i,b in enumerate(L)for a in L[:i]],L[-1:])[:-1]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=JYxBCkIhFEW34kwFHfxZCG0g3MHrDZ59JSH9H9NBa2kiRC2jfbSbECfnwuFwn5_9Ua9b7q9wPL9bDfrwO90ouZWYNfeWBAApUk45DFthUTkWM_O5JV-oemHl0DSkBRMRlQW9GJRg9ILz8buXmKsIAjhxxbgbuAysHKWcUe9z_w" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -113,7 +126,7 @@ def f(L):
 <p>In the actual code, we take the first list of two-element combinations, double both vertices in each combination, and then flatten and rotate the entire thing. For vertices A, B, C, D, the golfed code calculates <code>rotate_right(flatten([AABB, AACC, ..., CCDD]))</code> as<br />
 <code>all_but_last(D + AABB + AACC + ... + CCDD)</code>.</p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES10), 78 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES10), 78 bytes</h1>
 <p>Returns a flat array.</p>
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;v?[a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?a[0]:b]),f(a,b)].flat(2):a
 </code></pre>
@@ -159,7 +172,7 @@ v ?                 // if v is defined:
   a                 //   stop the recursion (a[] is empty)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>KƛZṫwẊ;fǓ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJLxpta4bmrd+G6ijtmx5MiLCIiLCJbXCJhXCIsXCJiXCIsXCJjXCIsXCJkXCIsXCJlXCJdIl0=" rel="nofollow noreferrer">Try it Online!</a>
@@ -184,7 +197,7 @@ Port of Neil's Charcoal answer.</p>
           ∩≈   # Has all elements equal?
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
 <pre><code>Φ⭆θ⭆…θκ⁺×²λ×²ικ§θ⁰
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMtM6cktUgjuATIS/dNLNAo1FFAcJwrk3NSnTPywcLZmjoKATmlxRohmbmpxRpGOgo5QBE4J1MTCECqNK25IGY7lnjmpaRWgPQaAEX//09MSk5J/a9blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: <a href="https://oeis.org/A097285" rel="nofollow noreferrer">A097285</a> is almost the sequence of indices, with each element doubled, except that there is only one of the first element at the start, the second coming at the end.</p>
@@ -202,7 +215,7 @@ Port of Neil's Charcoal answer.</p>
 Φ             κ§θ⁰  Remove the first element and append it to the end
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 23 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 23 bytes</h1>
 <pre><code>2œṖ$ÐƤṖUp/€żUẎṖƲ€Ẏ;Uṡ2Ɗ
 </code></pre>
 <p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCIyxZPhuZYkw5DGpOG5llVwL+KCrMW8VeG6juG5lsay4oKs4bqOO1XhuaEyxooiLCLDh8WS4bmYIiwiIixbIlwiYWJjZFwiIl1d" rel="nofollow noreferrer">Try It Online!</a></p>
